--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -97,7 +97,7 @@
   transform: translate(-50%, 100%) scale(1.4);
   opacity: 0;
 }
-.character-model {
+.character-container {
   height: 80%;
   height: 80vh;
   position: absolute;
@@ -110,7 +110,7 @@
   bottom: 50px;
   pointer-events: inherit;
 }
-.character-model::after {
+.character-container::after {
   content: "";
   width: 100vw;
   height: 250px;
@@ -125,7 +125,7 @@
   z-index: 9;
   position: absolute;
 }
-.character-model::before {
+.character-container::before {
   content: "";
   width: 100vw;
   height: 700px;
@@ -135,6 +135,11 @@
   transform: translateX(-50%);
   z-index: 9;
   position: absolute;
+}
+.character-model {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 .character-loaded .character-rim {
   animation: backlight 3s forwards;
@@ -292,14 +297,14 @@ h2.landing-info-h2 {
   }
 }
 @media screen and (min-width: 1025px) {
-  .character-model {
+  .character-container {
     height: 100vh;
     bottom: 0;
     z-index: 11;
     position: fixed;
   }
-  .character-model::after,
-  .character-model::before {
+  .character-container::after,
+  .character-container::before {
     display: none;
   }
   .landing-intro {
